--- a/copiatek.css
+++ b/copiatek.css
@@ -455,6 +455,7 @@ header {
         width: 300px;
     }
     .top-container {
+        display: flex;
         gap: 80px;
         flex-direction: column;
     }
